--- a/res/menu/tab_menu.xml
+++ b/res/menu/tab_menu.xml
@@ -4,20 +4,19 @@
     <group android:id="@+id/tab_group" >
         <item
             android:id="@+id/tab_new"
-            android:icon="@drawable/left"
+            android:icon="@drawable/new_record_selected"
             android:showAsAction="always"
-            android:title="recent"/>
+            android:title="@string/new_record_title"/>
         <item
             android:id="@+id/tab_old"
-            android:icon="@drawable/right"
+            android:icon="@drawable/list_unselected"
             android:showAsAction="always"
-            android:title="contacts"/>
+            android:title="@string/list_file_title"/>
+        <item
+            android:id="@+id/tab_menu_exit"
+            android:icon="@drawable/settings"
+            android:showAsAction="never"
+            android:title="@string/exit"/>
     </group>
-
-    <item
-        android:id="@+id/tab_menu_exit"
-        android:icon="@drawable/ic_tab_settings"
-        android:showAsAction="never"
-        android:title="exit"/>
 
 </menu>
